feat: add custom commend for linter

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: actions
+name: Build
 
 on:
   push:
@@ -31,6 +31,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
+          run: make lint
 
       - name: Test
         run: make test
