--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,12 +41,17 @@ archives:
 brews:
   -
     name: gvs
+    alternative_names:
+      - gvs@{{ .Version }}
+      - gvs@{{ .Major }}
     commit_author:
       name: Vasileios Pallas
       email: vspallas@gmail.com
+    commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     folder: Formula
     caveats: "Type 'gvs' on your command line and choose the Go version that you want from the dropdown. This command currently only works on macOS and Linux"
     homepage: "https://github.com/VassilisPallas/gvs"
+    license: "MIT"
     description: "A command line tool to manage multiple active Go versions."
     conflicts:
       - go
