--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,43 +2,31 @@ name: Build
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: [ "main", "release" ]
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
-      - 
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - 
-        name: Set up Go
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
-
-      - 
-        name: Build
+      - name: Build
         run: make build
-
-      - 
-        name: Format
+      - name: Format
         run: make format
-
-      - 
-        name: Vet
+      - name: Vet
         run: make vet
-
-      - 
-        name: Linter
+      - name: Linter
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.54
           skip-pkg-cache: true
-
-      - 
-        name: Test
+      - name: Test
         run: make test
