--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,21 +14,14 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             
-            - 
-              uses: actions/checkout@v3
+            - uses: actions/checkout@v3
               with:
                 fetch-depth: 0
-            
-            - 
-              run: git fetch --force --tags
-            
-            - 
-              uses: actions/setup-go@v4
+            - run: git fetch --force --tags
+            - uses: actions/setup-go@v4
               with:
                 go-version: '1.21'
-
-            - 
-              uses: goreleaser/goreleaser-action@v5
+            - uses: goreleaser/goreleaser-action@v5
               with:
                 distribution: goreleaser
                 version: latest
