--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,5 +1,6 @@
 builds:
-  - ldflags:
+  -
+    ldflags:
       - -s -w -X "main.version={{.Env.RELEASE_VERSION}}"
     main: cmd/gvs/main.go
     binary: gvs
@@ -27,20 +28,22 @@ changelog:
     - '^docs:'
     - '^test:'
 archives:
-  - name_template: '{{ .ProjectName }}_{{.Env.RELEASE_VERSION}}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    replacements:
-      darwin: darwin
-      linux: linux
-      386: 386
-      amd64: amd64
+  -
+    name_template: '{{ .ProjectName }}_{{.Env.RELEASE_VERSION}}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
+    # replacements:
+    #   darwin: darwin
+    #   linux: linux
+    #   386: 386
+    #   amd64: amd64
     # format_overrides:
     # - goos: windows
     #   format: zip
 brews:
-  - name: gvs
-    alternative_names:
-      - gvs@{{ .Version }}
-      - gvs@{{ .Major }}
+  -
+    name: gvs
+    # alternative_names:
+    #   - gvs@{{ .Version }}
+    #   - gvs@{{ .Major }}
     commit_author:
       name: Vasileios Pallas
       email: vspallas@gmail.com
