--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,10 @@ jobs:
               with:
                 fetch-depth: 0
             - run: git fetch --force --tags
+            - name: Set env
+              run: echo "RELEASE_VERSION=$(echo git tag --sort=taggerdate | tail -1)" >> $GITHUB_ENV
+            - name: Test
+              run: echo $RELEASE_VERSION
             - uses: actions/setup-go@v4
               with:
                 go-version: '1.21'
