--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
                 fetch-depth: 0
             - run: git fetch --force --tags
             - name: Set env
-              run: echo "RELEASE_VERSION=$(echo git tag --sort=taggerdate | tail -1)" >> $GITHUB_ENV
-            - name: Test
+              run: echo "RELEASE_VERSION=$(git tag --sort=taggerdate | tail -1)" >> $GITHUB_ENV
+            - name: Print new version
               run: echo $RELEASE_VERSION
             - uses: actions/setup-go@v4
               with:
