--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -35,7 +35,7 @@ archives:
     #   format: zip
 brews:
   -
-    name: gvs@{{ .Major }}.{{ .Minor }}.{{ .Patch }}
+    name: gvs
     commit_author:
       name: Vasileios Pallas
       email: vspallas@gmail.com
@@ -43,7 +43,7 @@ brews:
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
     download_strategy: CurlDownloadStrategy 
     folder: Formula
-    caveats: "Type 'gvs' on your command line and choose the Go version that you want from the dropdown. This command currently only works on macOS and Linux"
+    caveats: "Type 'gvs' on your command line and choose the Go version that you want from the dropdown. This command currently only works on macOS and Linux."
     homepage: "https://github.com/VassilisPallas/gvs"
     license: "MIT"
     description: "A command line tool to manage multiple active Go versions."
@@ -54,3 +54,7 @@ brews:
       system "#{bin}/gvs --version"
     install: |
       bin.install "gvs"
+    repository:
+      owner: VassilisPallas
+      name: homebrew-tap
+      branch: main
