--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -58,3 +58,4 @@ brews:
       owner: VassilisPallas
       name: homebrew-tap
       branch: main
+      token: "{{ secrets.GO_RELEASE_GITHUB_TOKEN }}"
